[package]
name = "distributed-key-value-store-example"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.82"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
clap = { version = "4.5.4", features = ["derive"] }
flume = "0.11.0"
futures = "0.3.30"
libp2p = { path = "../../libp2p", features = [
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "request-response",
    "tokio",
    "quic",
    "secp256k1",
] }
prost = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tonic = "0.11.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.12.4"
tonic-build = "0.11.0"


[lints]
workspace = true
